# libmsgwebsocket

./: CMakeLists.txt  README.md  ToDo
Dashboards/: CTestConfigLibMsgwebsocket.cmake  do_test.cmake  run_continuous  run_nightly
libmsgwebsocket/: CMakeLists.txt  client.cpp  commands.txt  config.h.in  hxb2msg_bridge.cpp  msgserver.cpp  msgwebsocket.cpp  msgwebsocket.hpp  msgwebsocketIF.hpp  mysmartgrid.de.key  websocketFactory.hpp
test/: CMakeLists.txt  client.cpp  demo_load.cpp
websocket-rails-client-cpp/websocket-rails-client/: .#channel.hpp  CMakeLists.txt  channel.cpp  channel.hpp  websocket.hpp  websocket_connection.cpp  websocket_connection.hpp  websocket_rails.cpp  websocket_rails.hpp
